# inspy-logger-legacy

./: .gitignore  Pipfile  pyproject.toml  requirements.txt  setup.py
examples/: basic_logger_non_verbose.py  basic_logger_verbose.py  logger_test.py
inspy_logger/: __init__.py
inspy_logger/errors/: __init__.py
inspy_logger/helpers/: decorators.py
