[tool.poetry]
name = "inspy_logger"
version = "2.0.1-alpha.0"
description = ""
authors = ["taylor <tayjaybabee@gmail.com>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.6"
python-toml = '*'
colorlog = '*'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

